--- a/settings.json
+++ b/settings.json
@@ -7,6 +7,8 @@
     "editor.minimap.enabled": false,
     "code-runner.runInTerminal": true,
     "editor.fontFamily": "JetBrains Mono",
+    "terminal.integrated.fontFamily": "JetBrains Mono",
+    "terminal.integrated.fontLigatures": true,
     "editor.fontSize": 16,
     "editor.lineHeight": 1.5,
     "editor.formatOnSave": true,
@@ -15,16 +17,12 @@
     "editor.guides.bracketPairs": true,
     "editor.tabSize": 2,
     "editor.wordWrap": "on",
-    "terminal.integrated.fontSize": 13,
+    "terminal.integrated.fontSize": 14,
     "workbench.startupEditor": "none",
     "editor.cursorBlinking": "smooth",
     "editor.cursorSmoothCaretAnimation": "on",
     "editor.smoothScrolling": true,
     "editor.fontLigatures": true,
-    "editor.rulers": [
-        80,
-        100
-    ],
     "editor.stickyScroll.enabled": true,
     "editor.scrollBeyondLastLine": false,
     "editor.linkedEditing": true,
@@ -41,5 +39,5 @@
     "workbench.list.smoothScrolling": true,
     "zenMode.hideLineNumbers": false,
     "editor.renderControlCharacters": true,
-    "editor.copyWithSyntaxHighlighting": false
+    "editor.copyWithSyntaxHighlighting": false,
 }
