--- a/settings.json
+++ b/settings.json
@@ -1,43 +1,26 @@
 {
-    "files.autoSave": "afterDelay",
-    "files.autoSaveDelay": 1000,
-    "workbench.iconTheme": "material-icon-theme",
-    "workbench.colorTheme": "GitHub Dark Default",
-    "extensions.ignoreRecommendations": true,
-    "editor.minimap.enabled": false,
-    "code-runner.runInTerminal": true,
-    "editor.fontFamily": "JetBrains Mono",
-    "terminal.integrated.fontFamily": "JetBrains Mono",
-    "terminal.integrated.fontLigatures": true,
-    "editor.fontSize": 16,
-    "editor.lineHeight": 1.5,
-    "editor.formatOnSave": true,
-    "editor.renderWhitespace": "boundary",
-    "editor.bracketPairColorization.enabled": true,
-    "editor.guides.bracketPairs": true,
-    "editor.tabSize": 2,
-    "editor.wordWrap": "on",
-    "terminal.integrated.fontSize": 14,
-    "workbench.startupEditor": "none",
-    "editor.cursorBlinking": "smooth",
-    "editor.cursorSmoothCaretAnimation": "on",
-    "editor.smoothScrolling": true,
-    "editor.fontLigatures": true,
-    "editor.stickyScroll.enabled": true,
-    "editor.scrollBeyondLastLine": false,
-    "editor.linkedEditing": true,
-    "editor.suggestSelection": "first",
-    "files.trimTrailingWhitespace": true,
-    "files.insertFinalNewline": true,
-    "workbench.editor.enablePreview": false,
-    "breadcrumbs.enabled": true,
-    "terminal.integrated.cursorStyle": "line",
-    "terminal.integrated.cursorBlinking": true,
-    "explorer.confirmDelete": false,
-    "explorer.confirmDrag": false,
-    "window.titleBarStyle": "custom",
-    "workbench.list.smoothScrolling": true,
-    "zenMode.hideLineNumbers": false,
-    "editor.renderControlCharacters": true,
-    "editor.copyWithSyntaxHighlighting": false,
+  "files.autoSave": "afterDelay",
+  "files.autoSaveDelay": 1000,
+  "workbench.iconTheme": "material-icon-theme",
+  "workbench.colorTheme": "GitHub Dark Default",
+  "extensions.ignoreRecommendations": true,
+  "editor.minimap.enabled": false,
+  "code-runner.runInTerminal": true,
+  "editor.fontFamily": "JetBrains Mono",
+  "terminal.integrated.fontFamily": "JetBrains Mono",
+  "terminal.integrated.fontLigatures": true,
+  "editor.fontSize": 16,
+  "editor.lineHeight": 1.5,
+  "editor.formatOnSave": true,
+  "editor.tabSize": 2,
+  "editor.wordWrap": "on",
+  "terminal.integrated.fontSize": 14,
+  "editor.cursorBlinking": "phase",
+  "editor.cursorSmoothCaretAnimation": "on",
+  "editor.smoothScrolling": true,
+  "editor.fontLigatures": true,
+  "window.titleBarStyle": "custom",
+  "editor.formatOnPaste": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.cursorStyle": "block"
 }
