--- a/settings.json
+++ b/settings.json
@@ -1,26 +1,24 @@
 {
   "files.autoSave": "afterDelay",
-  "files.autoSaveDelay": 1000,
-  "workbench.iconTheme": "material-icon-theme",
-  "workbench.colorTheme": "GitHub Dark Default",
-  "extensions.ignoreRecommendations": true,
   "editor.minimap.enabled": false,
-  "code-runner.runInTerminal": true,
-  "editor.fontFamily": "JetBrains Mono",
-  "terminal.integrated.fontFamily": "JetBrains Mono",
-  "terminal.integrated.fontLigatures": true,
+  "editor.wordWrap": "on",
+  "code-runner.saveAllFilesBeforeRun": true,
+  "code-runner.saveFileBeforeRun": true,
+  "editor.formatOnPaste": true,
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "workbench.iconTheme": "material-icon-theme",
   "editor.fontSize": 16,
   "editor.lineHeight": 1.5,
-  "editor.formatOnSave": true,
-  "editor.tabSize": 2,
-  "editor.wordWrap": "on",
-  "terminal.integrated.fontSize": 14,
-  "editor.cursorBlinking": "phase",
-  "editor.cursorSmoothCaretAnimation": "on",
-  "editor.smoothScrolling": true,
+  "extensions.ignoreRecommendations": true,
+  "code-runner.runInTerminal": true,
+  "workbench.colorTheme": "GitHub Dark Default",
+  "editor.fontFamily": "'JetBrains Mono', monospace",
   "editor.fontLigatures": true,
+  "terminal.integrated.fontFamily": "'JetBrains Mono', monospace",
+  "terminal.integrated.fontLigatures": true,
+  "terminal.integrated.fontSize": 14,
   "window.titleBarStyle": "custom",
-  "editor.formatOnPaste": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.cursorStyle": "block"
+  "editor.cursorBlinking": "phase",
+  "editor.cursorSmoothCaretAnimation": "on"
 }
